Fix scrollbars on chromeos

--- a/src/style.less
+++ b/src/style.less
@@ -88,8 +88,8 @@ body {
 }
 ::-webkit-scrollbar-thumb {
     border: solid 0 transparent;
-    border-right-width: 2px;
-    border-left-width: 2px;
+    border-right-width: 4px;
+    border-left-width: 4px;
     -webkit-border-radius: 9px 4px;
     -webkit-box-shadow:
       inset 0 0 0 1px rgba(128,128,128,0.2),
@@ -98,14 +98,14 @@ body {
 ::-webkit-scrollbar-thumb:horizontal {
     border-right-width: 0;
     border-left-width: 0;
-    border-top-width: 2px;
-    border-bottom-width: 2px;
+    border-top-width: 4px;
+    border-bottom-width: 4px;
     -webkit-border-radius: 4px 9px;
 }
 ::-webkit-scrollbar-thumb:hover {
     -webkit-box-shadow:
-      inset 0 0 0 1px rgba(128,128,128,0.8),
-      inset 0 0 0 4px rgba(128,128,128,0.8);
+      inset 0 0 0 1px rgba(121,145,232,0.8),
+      inset 0 0 0 4px rgba(121,145,232,0.8);
 }
 ::-webkit-scrollbar-corner {
   background: none;
